[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/TextTransition.gd" type="Script" id=1]
[ext_resource path="res://godotIcon.png" type="Texture" id=2]
[ext_resource path="res://Art/CENTURY.TTF" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/Fog.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
resource_name = "ScreenBlockerFadeIn"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("ScreenBlocker:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("fog:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.1, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="TextTransition" type="Node2D"]
z_index = 10
z_as_relative = false
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ScreenBlocker" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0 )
position = Vector2( 532.765, 310.185 )
scale = Vector2( 17.6489, 10.6933 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 44.0
margin_top = 184.0
margin_right = 525.0
margin_bottom = 266.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = SubResource( 1 )
text = "Level complete!"
align = 1
autowrap = true

[node name="Label2" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 386.0
margin_top = 478.0
margin_right = 637.0
margin_bottom = 508.0
custom_fonts/font = SubResource( 2 )
text = "Press any key to continue..."
align = 1
autowrap = true

[node name="TextAnimator" type="AnimationPlayer" parent="."]
anims/ScreenBlockerFadeIn = SubResource( 3 )
anims/TextFadeOut = SubResource( 4 )
anims/TextTransition = SubResource( 5 )

[node name="fog" parent="." instance=ExtResource( 4 )]
self_modulate = Color( 1, 1, 1, 0 )

[connection signal="animation_finished" from="TextAnimator" to="." method="_on_TextAnimator_animation_finished"]
